--- a/models/shil_tertinggi_k_proto.ipynb
+++ b/models/shil_tertinggi_k_proto.ipynb
@@ -1707,6 +1707,152 @@
     {
       "cell_type": "code",
       "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "=== ANALISIS DETAIL CLUSTER (Sesuai Masukan Dosen) ===\n",
+            "\n",
+            "Total Data: 49836 baris\n",
+            "\n",
+            "============================================================\n",
+            "CLUSTER 0 | Jumlah: 35955 (72.1%)\n",
+            "============================================================\n",
+            "\n",
+            "[Fitur Numerikal - Range & Rata-rata]\n",
+            "------------------------------------------------------------\n",
+            "• Days to Due                         : Range 0.00 - 0.15 (Avg: 0.14)\n",
+            "• Average Resolution Time (Ac)        : Range 3.13 - 10.78 (Avg: 5.49)\n",
+            "• Application SLA Compliance Rate     : Range 0.25 - 1.00 (Avg: 0.40)\n",
+            "• Resolution Duration                 : Range 0.00 - 1.00 (Avg: 0.04)\n",
+            "• SLA Threshold                       : Range 0.08 - 5.00 (Avg: 4.99)\n",
+            "• Is SLA Violated                     : Range 0.00 - 1.00 (Avg: 0.61)\n",
+            "\n",
+            "[Fitur Kategorikal - Dominansi & Persentase]\n",
+            "------------------------------------------------------------\n",
+            "• Priority                            : 4 - Low (99.5%), 3 - Medium (0.5%), 1 - Critical (0.0%)\n",
+            "• Item                                : application 97 (13.0%), application 300 (8.5%), application 83 (7.5%)\n",
+            "• Application Creation Day of Week    : Monday (24.0%), Tuesday (22.1%), Wednesday (19.5%)\n",
+            "• Application Creation Hour           : 9 (16.5%), 8 (15.1%), 10 (13.9%)\n",
+            "• Is Open Date Off                    : 0 (97.4%), 1 (2.6%)\n",
+            "• Is Due Date Off                     : 0 (100.0%)\n",
+            "• Open Month                          : 7 (15.8%), 5 (13.8%), 6 (12.3%)\n",
+            "• Application SLA Deadline Hour       : 9 (16.2%), 17 (14.6%), 10 (13.5%)\n",
+            "• Application SLA Deadline Day of Week : Monday (23.8%), Tuesday (22.3%), Wednesday (19.1%)\n",
+            "\n",
+            "============================================================\n",
+            "CLUSTER 1 | Jumlah: 9295 (18.7%)\n",
+            "============================================================\n",
+            "\n",
+            "[Fitur Numerikal - Range & Rata-rata]\n",
+            "------------------------------------------------------------\n",
+            "• Days to Due                         : Range 0.00 - 1.00 (Avg: 0.13)\n",
+            "• Average Resolution Time (Ac)        : Range 3.39 - 28.05 (Avg: 6.17)\n",
+            "• Application SLA Compliance Rate     : Range 0.00 - 0.39 (Avg: 0.22)\n",
+            "• Resolution Duration                 : Range 0.00 - 0.96 (Avg: 0.06)\n",
+            "• SLA Threshold                       : Range 0.25 - 5.00 (Avg: 4.85)\n",
+            "• Is SLA Violated                     : Range 0.00 - 1.00 (Avg: 0.80)\n",
+            "\n",
+            "[Fitur Kategorikal - Dominansi & Persentase]\n",
+            "------------------------------------------------------------\n",
+            "• Priority                            : 4 - Low (92.4%), 3 - Medium (7.5%), 2 - High (0.0%)\n",
+            "• Item                                : application 268 (26.2%), application 85 (19.6%), application 344 (5.7%)\n",
+            "• Application Creation Day of Week    : Monday (20.1%), Tuesday (19.5%), Thursday (18.3%)\n",
+            "• Application Creation Hour           : 9 (12.6%), 10 (10.4%), 11 (9.6%)\n",
+            "• Is Open Date Off                    : 0 (91.6%), 1 (8.4%)\n",
+            "• Is Due Date Off                     : 0 (100.0%), 1 (0.0%)\n",
+            "• Open Month                          : 7 (11.3%), 5 (10.3%), 1 (9.9%)\n",
+            "• Application SLA Deadline Hour       : 17 (29.3%), 9 (11.9%), 10 (9.9%)\n",
+            "• Application SLA Deadline Day of Week : Friday (23.7%), Tuesday (20.4%), Monday (19.7%)\n",
+            "\n",
+            "============================================================\n",
+            "CLUSTER 2 | Jumlah: 4586 (9.2%)\n",
+            "============================================================\n",
+            "\n",
+            "[Fitur Numerikal - Range & Rata-rata]\n",
+            "------------------------------------------------------------\n",
+            "• Days to Due                         : Range 0.00 - 0.23 (Avg: 0.10)\n",
+            "• Average Resolution Time (Ac)        : Range 3.53 - 10.78 (Avg: 5.53)\n",
+            "• Application SLA Compliance Rate     : Range 0.17 - 1.00 (Avg: 0.43)\n",
+            "• Resolution Duration                 : Range 0.00 - 0.62 (Avg: 0.04)\n",
+            "• SLA Threshold                       : Range 0.25 - 5.00 (Avg: 4.46)\n",
+            "• Is SLA Violated                     : Range 0.00 - 1.00 (Avg: 0.50)\n",
+            "\n",
+            "[Fitur Kategorikal - Dominansi & Persentase]\n",
+            "------------------------------------------------------------\n",
+            "• Priority                            : 4 - Low (73.2%), 3 - Medium (26.7%), 2 - High (0.1%)\n",
+            "• Item                                : application 101 (12.6%), application 85 (11.1%), application 91 (10.1%)\n",
+            "• Application Creation Day of Week    : Tuesday (16.8%), Monday (16.4%), Friday (15.6%)\n",
+            "• Application Creation Hour           : 18 (15.8%), 23 (11.9%), 19 (9.7%)\n",
+            "• Is Open Date Off                    : 0 (77.6%), 1 (22.4%)\n",
+            "• Is Due Date Off                     : 0 (100.0%), 1 (0.0%)\n",
+            "• Open Month                          : 2 (14.1%), 1 (12.0%), 3 (10.8%)\n",
+            "• Application SLA Deadline Hour       : 17 (99.7%), 12 (0.2%), 0 (0.1%)\n",
+            "• Application SLA Deadline Day of Week : Friday (30.3%), Tuesday (24.0%), Monday (16.3%)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# --- KODE ANALISIS BARU (PERSENTASE & RANGE) ---\n",
+        "# Jalankan cell ini SETELAH Cell 13 selesai\n",
+        "\n",
+        "def analisis_cluster_detail(df, col_cluster, col_numerikal, col_kategorikal):\n",
+        "    unique_clusters = sorted(df[col_cluster].unique())\n",
+        "    \n",
+        "    print(f\"\\n=== ANALISIS DETAIL CLUSTER (Sesuai Masukan Dosen) ===\\n\")\n",
+        "    print(f\"Total Data: {len(df)} baris\")\n",
+        "    \n",
+        "    for cluster_id in unique_clusters:\n",
+        "        df_cluster = df[df[col_cluster] == cluster_id]\n",
+        "        n_data = len(df_cluster)\n",
+        "        proporsi = n_data / len(df) * 100\n",
+        "        \n",
+        "        print(f\"\\n{'='*60}\")\n",
+        "        print(f\"CLUSTER {cluster_id} | Jumlah: {n_data} ({proporsi:.1f}%)\")\n",
+        "        print(f\"{'='*60}\")\n",
+        "        \n",
+        "        # 1. Analisis Numerikal (Range & Mean)\n",
+        "        print(f\"\\n[Fitur Numerikal - Range & Rata-rata]\")\n",
+        "        print(f\"{'-'*60}\")\n",
+        "        for col in col_numerikal:\n",
+        "            stats = df_cluster[col].describe()\n",
+        "            _min = stats['min']\n",
+        "            _max = stats['max']\n",
+        "            _mean = stats['mean']\n",
+        "            print(f\"• {col:<35} : Range {_min:.2f} - {_max:.2f} (Avg: {_mean:.2f})\")\n",
+        "        \n",
+        "        # 2. Analisis Kategorikal (Persentase Komposisi)\n",
+        "        print(f\"\\n[Fitur Kategorikal - Dominansi & Persentase]\")\n",
+        "        print(f\"{'-'*60}\")\n",
+        "        for col in col_kategorikal:\n",
+        "            # Hitung persentase\n",
+        "            counts = df_cluster[col].value_counts(normalize=True) * 100\n",
+        "            top_3 = counts.head(3)\n",
+        "            \n",
+        "            # Format string output\n",
+        "            detail_str = \", \".join([f\"{idx} ({val:.1f}%)\" for idx, val in top_3.items()])\n",
+        "            print(f\"• {col:<35} : {detail_str}\")\n",
+        "\n",
+        "# PANGGIL FUNGSI MENGGUNAKAN VARIABEL DARI CELL 13\n",
+        "# df_analysis = dataframe yang sudah ada label clusternya (dari Cell 13)\n",
+        "# 'Cluster' = nama kolom label (dari Cell 13)\n",
+        "# numeric_cols_to_analyze = list kolom numerik (dari Cell 13)\n",
+        "# categorical_cols_to_analyze = list kolom kategorikal (dari Cell 13)\n",
+        "\n",
+        "analisis_cluster_detail(\n",
+        "    df_analysis, \n",
+        "    'Cluster', \n",
+        "    numeric_cols_to_analyze, \n",
+        "    categorical_cols_to_analyze\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
         "id": "98879IHv-n5W"
       },
@@ -2006,7 +2152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {
         "id": "1iF8ZKhFh_Ad"
       },
@@ -2122,7 +2268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "metadata": {
         "id": "DzvLFNrl30c4"
       },
